Fix spacing above h4s

--- a/css/style.css
+++ b/css/style.css
@@ -1865,6 +1865,7 @@ textarea {
 	}
 	.work-info h4 {
 		margin-left: 35px;
+		margin-top: 21px;
 	}
 	.work-info .work-right2 h4 {
 		margin-left: 201px;
